<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundo"
    android:orientation="vertical"
    tools:context=".TelaDeTema">

    <TextView
        android:id="@+id/txtEscolhaDeTemas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tema"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <CheckBox
            android:id="@+id/ckbTema1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckbTema1"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbTema2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckbTema2"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbTema3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckbTema3"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbTema4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckbTema4"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbTema5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckbTema5"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:text="@string/btnTema"
        android:textColor="@color/colorLetras"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>