<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundo"
    android:orientation="vertical"
    tools:context=".TelaSobre">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/sobre_desenvolvido"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/sobre_Orientacao"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/projeto_concluido"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorAccent"
        android:text="@string/btnMenu_Principal"
        android:textColor="@color/colorLetras"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>