<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".TelaInicial">

    <LinearLayout
        android:id="@+id/principalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFundo"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:layout_marginBottom="25dp"
            android:background="#151314"
            android:elevation="2dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:paddingBottom="20dp"
                android:text="@string/nome_projeto"
                android:textColor="@color/colorAccent"
                android:textSize="50dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:elevation="1dp"
                android:paddingBottom="10dp"
                android:text="@string/pergunta_nome"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:padding="10dp"
                android:textAlignment="center"
                android:maxLength="10"
                android:textColor="@color/colorLetras" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:elevation="2dp"
                android:text="@string/btnIniciar"
                android:textColor="@color/colorLetras"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSobre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:elevation="2dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/btnSobre"
                android:textColor="@color/colorLetras"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>